# people_detection

./: .gitignore  CMakeLists.txt  Makefile  Vagrantfile  face_detector.yml  report.md  report.tex
apps/: detection_test.cpp  extract_samples.cpp  main.cpp  people_detector.cpp  train.cpp
include/: cascade_classifier.h  common.h  detection_performance.h  detection_stats.h  feature.h  feature_value.h  integral_image.h  load_trained_detector.h  rect.h  sample.h  sample_selector.h  storage.h  strong_classifier.h  strong_classifier_training.h  sub_window.h  training_sample.h  weak_classifier.h
include/pcl/segmentation/: single_seed_region_growing.h  single_seed_region_growing_rgb.h
include/pcl/segmentation/impl/: single_seed_region_growing.hpp  single_seed_region_growing_rgb.hpp
keynote/: architecture.xcf
provisioning/manifests/: init.pp
provisioning/modules/pcl/manifests/: init.pp
provisioning/modules/pcl/templates/: dot_bashrc.erb
provisioning/modules/yaml/manifests/: init.pp
report/: negative_samples.xcf  positive_samples.xcf  report.bib  report.tex
src/: cascade_classifier.cpp  detection_performance.cpp  extract_faces.cpp  extract_samples.cpp  feature.cpp  feature_value.cpp  integral_image.cpp  main.cpp  rect.cpp  sample_selector.cpp  single_seed_region_growing.cpp  single_seed_region_growing_rgb.cpp  storage.cpp  strong_classifier.cpp  strong_classifier_training.cpp  sub_window.cpp  training_sample.cpp  weak_classifier.cpp  window_selector.cpp  window_selector.h
